# Emotion-And-Emotion-Flip-Reasoning

./: .gitattributes  .gitignore  README.IT.md  README.md  pyproject.toml  requirements.txt
artifacts/: best_model.pt  example_predictions.json  history.json  label_mapping.json  metrics.json  training_config.json
artifacts/encoder_config/: config.json
colab/: train_from_drive.ipynb
examples/: dialogue.json  dialogue2.json
src/meld_efr/: __init__.py  cli.py  data.py  inference.py  model.py  training.py  utils.py
src/meld_efr_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
