[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meld-efr-cli"
version = "0.1.0"
description = "CLI project for MELD Emotion Flip Reasoning training and inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "transformers>=4.40,<5",
  "scikit-learn>=1.3",
  "numpy>=1.24",
]

[project.scripts]
meld-efr = "meld_efr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
